# axum-demo

./: Cargo.toml  Dockerfile  Makefile  compose.yaml
docker/aws/: resources.sh
samples/: event.json  notification.json
src/: batch.rs  deleter.rs  handler.rs  main.rs  model.rs  schedule.rs  shutdown.rs  supplier.rs
src/batch/: summary.rs
src/model/: event.rs  notification.rs  s3_notification.rs
src/processor/: extractor.rs  mod.rs  transform.rs
src/writer/: batch.rs  mod.rs
